Updated convexity material

--- a/common/convex.tex
+++ b/common/convex.tex
@@ -385,15 +385,50 @@ Examples of metrics generating balls which are \emph{not} convex include the fol
 %=======================================
 \section{Convex functions}
 %=======================================
+\begin{figure}[ht]
+\color{figcolor}
+\setlength{\unitlength}{0.3mm}
+\begin{center}
+\begin{picture}(200,130)(-50,-30)
+  \put(  0,  0){\line(1, 0){120}}
+  \put(  0,  0){\line(0, 1){120}}
+  \put( 20, 80){\circle*{5}}
+  \put(100, 40){\circle*{5}}
+  \put( 20, 80){\line(2,-1){80}}
+  \put(125,  0){\makebox(0,0)[l]{$x$}}
+  \put( -5, 80){\makebox(0,0)[r]{$\ff(b)$}}
+  \put( -5, 40){\makebox(0,0)[r]{$\ff(a)$}}
+  \put( 20, -5){\makebox(0,0)[t]{$a$}}
+  \put(100, -5){\makebox(0,0)[t]{$b$}}
+  \qbezier(20,80)(70,120)(100,40)
+  \qbezier(20,80)(30,0)(100,40)
+  \qbezier[28](20,0)(20,40)(20,80)
+  \qbezier[14](100,0)(100,20)(100,40)
+  \qbezier[7](0,80)(10,80)(20,80)
+  \qbezier[32](0,40)(50,40)(100,40)
+  \put(120,90){\vector(-1,0){50}}
+  \put(120,60){\vector(-1,0){50}}
+  \put(120,30){\vector(-1,0){30}}
+  \put(125,90){\makebox(0,0)[l]{concave}}
+  \put(125,60){\makebox(0,0)[l]{chord $\fy(x)$}}
+  \put(125,30){\makebox(0,0)[l]{convex}}
+\end{picture}
+\end{center}
+\caption{
+  Convex and concave functions
+  \label{fig:convex}
+  }
+\end{figure}
 %--------------------------------------
 \begin{definition}
-\label{def:convexf}
 \footnote{
   \citerpg{simon2011}{2}{1107007313},
   \citerpg{barvinok2002}{2}{0821872311},
   \citerp{bollobas1999}{3},
-  \citerp{jensen1906}{176}
+  \citerp{jensen1906}{176},
+  \citerc{clarkson1936}{strictly convex}
   }
+\label{def:convexf}
 \index{convex!functional}
 \index{convex!strictly}
 \index{strictly convex}
@@ -401,12 +436,12 @@ Examples of metrics generating balls which are \emph{not} convex include the fol
 Let $\linearspaceX$ be a \structe{linear space}\ifsxref{vector}{def:vspace} 
 and $\setD$ a \structe{convex set} \xref{def:convex_set} in $\setX$.
 \defbox{\begin{array}{rcl@{\qquad}l}
-  \mc{4}{M}{A function $\ff\in\clF{\setD}{F}$ is \hid{convex} if}\\
+  \mc{4}{M}{A function $\ff\in\clF{\setD}{F}$ is \propd{convex} if}\\
   \indentx\ff\big(\lambda \vx + [1-\lambda]\vy\big) 
     &\le& \lambda \ff(\vx) + (1-\lambda)\:\ff(\vy)  
     &     \forall \vx,\vy\in\setD \text{ and } \forall\lambda\in(0,1)
   \\ 
-  \mc{4}{M}{A function $\fg\in\clF{\setD}{F}$ is \hid{strictly convex} if }\\
+  \mc{4}{M}{A function $\fg\in\clF{\setD}{F}$ is \propd{strictly convex} if }\\
   \indentx\fg\big(\lambda \vx + [1-\lambda]\vy\big) 
     &=&   \lambda \fg(\vx) + (1-\lambda)\:\fg(\vy)  
     &     \forall \vx,\vy\in\setD,\;\vx\ne \vy,\; \text{and } \forall\lambda\in(0,1)
@@ -497,6 +532,26 @@ Let $\ff$ be a \structe{functional} in $\clFxr$.
   }
 \end{proposition}
 
+Often a function can be proven to be \hie{convex} or \hie{concave}.
+\hie{Convex} and \hie{concave} functions are
+defined in \prefpp{def:convex} (next) and
+illustrated in \prefpp{fig:convex}.
+%---------------------------------------
+\begin{definition}
+\label{def:convex}
+%---------------------------------------
+Let
+  \[ \fy(x) = \frac{\ff(b)-\ff(a)}{b-a} (x-a) + \ff(a). \]
+A function $\ff:\R\to\R$ is
+
+\defbox{\begin{array}{FMMrclD}
+    (1).&\propd{convex}           & in $\intoo{a}{b}$ if & \ff(x) &\le& \fy(x) & for $x\in\intoo{a}{b}$ \\
+    (2).&\propd{concave}          & in $\intoo{a}{b}$ if & \ff(x) &\ge& \fy(x) & for $x\in\intoo{a}{b}$ \\
+    (3).&\propd{strictly convex}  & in $\intoo{a}{b}$ if & \ff(x) &<  & \fy(x) & for $x\in\intoo{a}{b}$ \\
+    (4).&\propd{strictly concave} & in $\intoo{a}{b}$ if & \ff(x) &>  & \fy(x) & for $x\in\intoo{a}{b}$
+  \end{array}}
+\end{definition}
+
 %--------------------------------------
 \begin{theorem}[\thmd{Jensen's Inequality}]
 \footnote{
@@ -561,64 +616,6 @@ Proof is by induction:
 \end{align*}
 \end{proof}
 
-
-
-\begin{figure}[ht]
-\color{figcolor}
-\setlength{\unitlength}{0.3mm}
-\begin{center}
-\begin{picture}(200,130)(-50,-30)
-  \put(  0,  0){\line(1, 0){120}}
-  \put(  0,  0){\line(0, 1){120}}
-  \put( 20, 80){\circle*{5}}
-  \put(100, 40){\circle*{5}}
-  \put( 20, 80){\line(2,-1){80}}
-  \put(125,  0){\makebox(0,0)[l]{$x$}}
-  \put( -5, 80){\makebox(0,0)[r]{$\ff(b)$}}
-  \put( -5, 40){\makebox(0,0)[r]{$\ff(a)$}}
-  \put( 20, -5){\makebox(0,0)[t]{$a$}}
-  \put(100, -5){\makebox(0,0)[t]{$b$}}
-  \qbezier(20,80)(70,120)(100,40)
-  \qbezier(20,80)(30,0)(100,40)
-  \qbezier[28](20,0)(20,40)(20,80)
-  \qbezier[14](100,0)(100,20)(100,40)
-  \qbezier[7](0,80)(10,80)(20,80)
-  \qbezier[32](0,40)(50,40)(100,40)
-  \put(120,90){\vector(-1,0){50}}
-  \put(120,60){\vector(-1,0){50}}
-  \put(120,30){\vector(-1,0){30}}
-  \put(125,90){\makebox(0,0)[l]{concave}}
-  \put(125,60){\makebox(0,0)[l]{chord $\fy(x)$}}
-  \put(125,30){\makebox(0,0)[l]{convex}}
-\end{picture}
-\end{center}
-\caption{
-  Convex and concave functions
-  \label{fig:convex}
-  }
-\end{figure}
-
-Often a function can be proven to be \hie{convex} or \hie{concave}.
-\hie{Convex} and \hie{concave} functions are
-defined in \prefpp{def:convex} (next) and
-illustrated in \prefpp{fig:convex}.
-%---------------------------------------
-\begin{definition}
-\label{def:convex}
-%---------------------------------------
-Let
-  \[ \fy(x) = \frac{\ff(b)-\ff(a)}{b-a} (x-a) + \ff(a). \]
-A function $\ff:\R\to\R$ is
-
-\defbox{
-  \begin{array}{llrcll}
-    \mbox{\bf convex}           \mbox{ in } (a,b) & \mbox{if} & \ff(x) &\le& \fy(x) & \mbox{for } x\in(a,b) \\
-    \mbox{\bf concave}          \mbox{ in } (a,b) & \mbox{if} & \ff(x) &\ge& \fy(x) & \mbox{for } x\in(a,b) \\
-    \mbox{\bf strictly convex}  \mbox{ in } (a,b) & \mbox{if} & \ff(x) &<  & \fy(x) & \mbox{for } x\in(a,b) \\
-    \mbox{\bf strictly concave} \mbox{ in } (a,b) & \mbox{if} & \ff(x) &>  & \fy(x) & \mbox{for } x\in(a,b)
-  \end{array}
-  }
-\end{definition}
 
 The next theorem gives another form of convex functions that is a little
 less intuitive but provides powerful analytic results.
@@ -728,8 +725,6 @@ By \prefpp{thm:convex_lambda}, $\ff(x)$ is convex.
     \\\citerpgc{blumenthal1970}{41}{0828402426}{?}
     \\\citerppg{khamsi2001}{35}{38}{0471418250}
 
-  \item Strictly convex:
-    \\\citor{clarkson1936}
 
 \end{enumerate}
 \end{survey}
