--- a/common/pdfcdf.tex
+++ b/common/pdfcdf.tex
@@ -9,9 +9,9 @@
 \qboxnpq
   {Joseph Leonard Doob (1910--2004), pioneer of and key contributor to mathematical probability\footnotemark}
   {../common/people/doobjl_dartmouthedu.jpg}
-  {While writing my book I had an argument with Feller. 
-   He asserted that everyone said ``random variable" and I asserted that everyone said ``chance variable." 
-   We obviously had to use the same name in our books, so we decided the issue by a stochastic procedure. 
+  {While writing my book I had an argument with Feller.
+   He asserted that everyone said ``random variable" and I asserted that everyone said ``chance variable."
+   We obviously had to use the same name in our books, so we decided the issue by a stochastic procedure.
    That is, we tossed for it and he won.}
 \citetblt{
   quote: & \citerp{snell1997}{307}, \citerp{snell2005}{251}\\
@@ -29,7 +29,7 @@ random processes.
 Before what a \fncte{random variable} \emph{is}, note two things that a \fncte{random variable} is \emph{not} (next remark).
 %---------------------------------------
 \begin{remark}
-\citetbl{
+\footnote{
   \citerpg{miller2006}{130}{0471458929},
   \citerpgc{feldman2010}{4}{3642051588}{``The name ``random variable" is actually a misnomer, since it is not random and not a variable.\ldots the \fncte{random variable} simply maps each point (outcome) in the sample space to a number on the real line\ldots Technically, the space into which the \fncte{random variable} maps the sample space may be more general than the real line\ldots"},
   \citerpg{curry2011}{4}{3642166180},
@@ -46,7 +46,7 @@ As pointed out by others, the term ``random variable" is a ``misnomer":
 
 What is it then? It is a \structe{function} (next definition).
 In particular, it is a function that maps from an underlying stochastic process into $\R$.
-Any ``\prope{randomness}" (whatever that means) it may \emph{appear} to have comes from the stochastic process it 
+Any ``\prope{randomness}" (whatever that means) it may \emph{appear} to have comes from the stochastic process it
 is mapping \emph{from}. But the function itself (the \fncte{random variable} itself) is very deterministic and well-defined.
 %
 %A \fncte{random variable} is actually a \hie{function} $\rvX(\omega)$, where
@@ -60,40 +60,38 @@ is mapping \emph{from}. But the function itself (the \fncte{random variable} its
 %---------------------------------------
 \begin{definition}
 \index{random variable}
-\citetbl{
+\footnote{
   \citerp{papoulis}{63}
   }
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} \xref{def:ps}.
-A \fnctd{random variable} $\rvX$ is a function $\rvX:\pso\to\R$.
+A \fnctd{random variable} $\rvX$ is a function $\rvX$.
 \end{definition}
 
 The probability information about $\sigma$-algebra $\pse$ is completely
 specified by \fncte{measure} $\psp$.
 However, sometimes it is more convenient to express this same \fncte{measure}
-information in terms of the \hie{probability density function} or the
-\hie{cummulative distribution function} of the \structe{probability space}.
+information in terms of the \fncte{probability density function} or the
+\fncte{cummulative distribution function} of the \structe{probability space}.
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerpgc{linden2014}{93}{1107035902}{Definitions 7.1, 7.2}
   }
 \label{def:pdf}
 \label{def:cdf}
 %---------------------------------------
-Let $\ps$ be a \structe{probability space} and
-$\rvX:\pso\to\R$ a \fncte{random variable}.
-\defbox{\begin{array}{MMrc>{\ds}l}
-  A \fnctd{probability density function} 
-  & (\fnctd{pdf}) $\ppx$ is defined as
-  & \ppx(x) &\eqd& \lim_{\epsilon\to 0} \frac{1}{\epsilon}\psp\setn{x \le \rvX < x+\epsilon}
-  \\
-  A \fnctd{cummulative distribution function} 
-  & (\fnctd{cdf}) $\pcx$ is defined as
-  & \pcx(x) &\eqd& \psp\setn{\rvX < x }
+Let $\rvX$ a \fncte{random variable} on the \structe{probability space} $\ps$ \xref{def:ps}.
+\defbox{\begin{array}{MM}
+  The \fnctd{cummulative distribution function}
+    &(\fnctd{cdf}) of $\rvX$ is a function $\pcx$ in $\clFor$ such that
+    \\\mc{2}{l}{\indentx\ds\pcx(x) \eqd \psp\setn{\rvX < x }}
+    \\
+  The \fnctd{probability density function}
+    &(\fnctd{pdf}) of $\rvX$ is a function $\ppx$ in $\clFor$ such that
+    \\\mc{2}{l}{\indentx\ds\ppx(x) \eqd \ddx\pcx(x)}
 \end{array}}
 \end{definition}
-
 
 %---------------------------------------
 \begin{definition}
@@ -101,7 +99,7 @@ $\rvX:\pso\to\R$ a \fncte{random variable}.
 \label{def:jointcdf}
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} \xref{def:ps} and
-$\rvX:\pso\to\R$ and $\rvY:\pso\to\R$ random variables. Then
+$\rvX$ and $\rvY:\pso\to\R$ random variables. Then
 a \fnctd{joint probability density function}    $\ppx:\pse\times\pso\to\intcc{0}{1}$ and
 a \fnctd{joint cumulative distribution function} $\pcx:\pse\times\pso\to\intcc{0}{1}$
 are defined as
@@ -111,7 +109,6 @@ are defined as
           \\
   \ppxy(x,y) &\eqd& \ddy\ddx\pcxy(x,y)
           & (\fncte{joint probability density function})
-  %\ppxy(x,y) &\eqd& \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\brb{x \le\rvX < x+\varepsilon \land y \le\rvY < y+\varepsilon}
 \end{array}}
 \end{definition}
 
@@ -121,7 +118,7 @@ are defined as
 \label{def:concdf}
 %---------------------------------------
 Let $\ps$ be a \structe{probability space} \xref{def:ps} and
-$\rvX:\pso\to\R$ a random variable. Then
+$\rvX$ a random variable. Then
 a \fnctd{conditional probability density function}    $\ppx:\pse\times\pso\to\intcc{0}{1}$ and
 a \fnctd{conditional cumulative distribution function} $\pcx:\pse\times\pso\to\intcc{0}{1}$
 are defined as
@@ -132,21 +129,7 @@ are defined as
   \ppx(x|y) &\eqd& \ddx\pcx(x|y)
   %\ppx(x|y) &\eqd& \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\brb{x \le\rvX < x+\varepsilon | \rvY=y}
             & (\fncte{conditional probability density function}---\fncte{pdf})
-          \\
 \end{array}}
-\end{definition}
-
-%---------------------------------------
-\begin{definition}
-\label{def:uniform}
-%---------------------------------------
-The \fnctd{uniform distribution} $\ppx(x)$ is defined as 
-\defbox{
-  \ppx(x) \eqd \brb{\begin{array}{lM}
-                      1  & for $0< x \le 1$\\
-                      0  & otherwise
-                    \end{array}} 
-  }
 \end{definition}
 
 %======================================
@@ -157,12 +140,43 @@ $\ps$ in terms of \fncte{measure} $\psp$.
 Conversely, the probability \fncte{measure} $\psp\setn{a\le\rvX<b}$
 of an event $\{a\le\rvX<b\}$ can be
 expressed in terms of either the pdf or cdf.
+
+%---------------------------------------
+\begin{proposition}
+\label{prop:pdfddx}
+%---------------------------------------
+Let $\rvX$ a \fncte{random variable} with \fncte{pdf} $\ppx$ and \fncte{cdf} $\pcx$
+\xref{def:pdf} on the \structe{probability space} $\ps$ \xref{def:ps}.\\
+\propbox{
+  \brb{\begin{array}{FMD}
+    (1).& $\pcx(x)$ and $\pcy(y)$ are \prope{continuous} & OR \\
+    (2).& $\ppx(x)$ and $\ppy(y)$ are \prope{continuous}
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{rc>{\ds}l}
+      \ppx(x)    &=& \lim_{\epsilon\to 0} \frac{1}{\epsilon}\psp\setn{x \le \rvX < x+\epsilon}
+    \\\ppxy(x,y) &=& \lim_{\varepsilon\to 0} \frac{1}{\varepsilon}\psp\brb{x \le\rvX < x+\varepsilon \land y \le\rvY < y+\varepsilon}
+  \end{array}}
+  }
+\end{proposition}
+\begin{proof}
+\begin{align*}
+  \ppx(x)
+    &\eqd \ddx\pcx(x)
+    && \text{by definition of $\ppx$}
+    && \text{\xref{def:pdf}}
+  \\&=    \lim_{\epsilon\to 0} \frac{1}{\epsilon}\psp\set{x\in\R}{x \le \rvX < x+\epsilon}
+    && \text{by definition of $\ddx$}
+    && \text{\xref{def:ddx}}
+\end{align*}
+\end{proof}
+
 %---------------------------------------
 \begin{theorem}
 \label{thm:pdfcdf}
 %---------------------------------------
 Let $\ps$ be a probability space,
-$\rvX:\pso\to\R$ be a random variable, and $(a,b)$ a real interval.
+$\rvX$ be a random variable, and $(a,b)$ a real interval.
 Then
 \thmbox{
   \brb{\begin{array}{FMD}
@@ -201,7 +215,7 @@ Then
 \begin{theorem}
 %---------------------------------------
 Let $\ps$ be a \structe{probability space},
-$\rvX:\pso\to\R$ be a \fncte{random variable}, and $\intoo{a}{b}$ a \structe{real interval}.
+$\rvX$ be a \fncte{random variable}, and $\intoo{a}{b}$ a \structe{real interval}.
 \thmbox{\begin{array}{rc>{\ds}l}
   \psp\setn{a\le\rvX<b}
     &=& \int_a^b \ppx(x) \dx
@@ -243,7 +257,7 @@ The properties of the pdf follow closely the properties of \fncte{measure} $\psp
 %---------------------------------------
 \thmbox{\begin{array}{rcl}
   \pcx(\sup\R) &=& 1 \\
-  \pcx(\inf\R) &=& 0 
+  \pcx(\inf\R) &=& 0
 \end{array}}
 \end{theorem}
 \begin{proof}
@@ -327,7 +341,6 @@ The properties of the pdf follow closely the properties of measure $\psp$.
 \label{thm:pdf1}
 %---------------------------------------
 Let $\ps$ be a probability space.
-%$\rvX:\pso\to\R$ be a random variable, and $(a,b)$ a real interval.
 \thmbox{\begin{array}{>{\ds}rc>{\ds}l C| >{\ds}rc>{\ds}l}
     \int_{x\in\R} \ppx(x)    \dx &=& 1       &                  & \int_{x\in\R} \ppxcy(x|y) \dx               &=& 1\\
     \int_{y\in\R} \ppxy(x,y) \dy &=& \ppx(x) & \forall x\in\pso & \int_{x\in\R}\int_{y\in\R}\ppxy(x,y) \dy\dx &=& 1
@@ -335,17 +348,17 @@ Let $\ps$ be a probability space.
 \end{theorem}
 \begin{proof}
 \begin{align*}
-  \int_{\R} \ppx(x) \dx 
+  \int_{\R} \ppx(x) \dx
     &= \pcx(\sup\R) - \pcx(\inf\R)
     && \text{by \prefp{thm:pdfcdf}}
   \\&= 1 - 0
   \\&= 1
     && \mathrlap{\text{because $0$ is the additive identity element in $\fieldR$}}
   \\
-  \int_{x\in\R} \ppxcy(x|y) \dx 
+  \int_{x\in\R} \ppxcy(x|y) \dx
     &\eqd \int_{x\in\R} \ddx\pcxcy(x|y) \dx
     &&    \text{by definition of $\ppxcy(x|y)$ \xref{def:conpdf}}
-  \\&=    \pcxcy(\sup\R|y) - \pcxcy(\inf\R|y) 
+  \\&=    \pcxcy(\sup\R|y) - \pcxcy(\inf\R|y)
     &&    \text{by \thme{Fundamental theorem of calculus}}
   \\&=    1-0
   \\&=    1
@@ -369,7 +382,7 @@ Let $\ps$ be a probability space.
 \label{prop:cdf_monotone}
 %---------------------------------------
 Let $\ps$ be a probability space, and $\rvX$ a \fncte{random variable}
-with \fncte{probability density function} $\ppx(x)$ and 
+with \fncte{probability density function} $\ppx(x)$ and
 \fncte{cumulative distribution function} $\pcx(x)$.
 \propbox{\begin{array}{FMD}
     (1).& $\pcx(x)$ is \prope{monotone}                                                    &and\\
@@ -404,7 +417,7 @@ with \fncte{cumulative distribution function} $\pcx(x)$.
 %=======================================
 %---------------------------------------
 \begin{theorem}[\thmd{Probability integral transform}]
-\citetbl{
+\footnote{
   \citeP{angus1994},
   \citerpgc{roussas2014}{232}{0128004371}{Theorem 10},
   \citerpgc{devroye1986}{28}{0387963057}{Theorem 2.1}
@@ -445,7 +458,7 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 
 %---------------------------------------
 \begin{theorem}[\thmd{Inverse probability integral transform}] %[\thmd{Inverse transform sampling}]
-\citetbl{
+\footnote{
   \citerpgc{devroye1986}{28}{0387963057}{Theorem 2.1},
   \citerpgc{balakrishnan2009}{624}{0387096140}{14.2.1 Introduction}
   }
@@ -458,7 +471,7 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
   \brb{\begin{array}{FMD}
          (1).&$\rvY=\pcz^{-1}(\rvX)$                       & and\\
          (2).&$\rvY$ is \prope{uniformly distributed} & and\\
-         (3).&$\ppz(z)$ is \prope{continuous}         &    
+         (3).&$\ppz(z)$ is \prope{continuous}         &
        \end{array}}
   \quad\implies\quad
   \brb{\begin{array}{M}
@@ -472,11 +485,11 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
   \pcy(y)
     &\eqd \pP{\rvY\le y}
     &&    \text{by definition of $\pcy$}          &&    \text{\xref{def:cdf}}
-  \\&=    \pP{\pcz^{-1}(\rvX)\le y}               
-    &&    \text{by hypothesis (1)}                
-  \\&=    \pP{\rvX \le \pcz(y)}                   
+  \\&=    \pP{\pcz^{-1}(\rvX)\le y}
+    &&    \text{by hypothesis (1)}
+  \\&=    \pP{\rvX \le \pcz(y)}
     &&    \text{by hypothesis (3) and}            &&    \text{\prefp{prop:cdf_monotone}}
-  \\&\eqd \pcx\brs{\pcz(y)}                       
+  \\&\eqd \pcx\brs{\pcz(y)}
     &&    \text{by definition of $\pcx$}          &&    \text{\xref{def:cdf}}
   \\&=    \pcz(y)
     &&    \text{because $0\le\pcz(y)\le1$ and by} && \text{\prefp{prop:cdf_uniform}}
@@ -542,7 +555,7 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 
 %---------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerpgc{callahan2010}{189}{144197332X}{Definition 6.1}
   }
 \label{def:cp}
@@ -556,25 +569,25 @@ Let $\ff(x)$ be a \structe{differentiable function} in $\clFrr$.
 
 %---------------------------------------
 \begin{theorem}
-\citetbl{
-  \citerp{papoulis}{93}, 
+\footnote{
+  \citerp{papoulis}{93},
   \citerp{proakis}{30}
   }
 \label{thm:Y=f(X)}
 \label{thm:YfX}
 %---------------------------------------
 Let $\rvX$ and $\rvY$ be \fncte{random variable}s in $\clFrr$.
-Let $\ff$ be a \structe{differentiable function} in $\clFrr$ 
+Let $\ff$ be a \structe{differentiable function} in $\clFrr$
 with $\xN$ \prope{critical point}s \xref{def:cp}.
 Let the range of $\rvX$ be partitioned into $\xN+1$ partitions
-$\set{\setA_n}{n=1,2,\ldots,\xN+1}$ 
+$\set{\setA_n}{n=1,2,\ldots,\xN+1}$
 with partition boundaries set at the $\xN$ \structe{critical point}s of $\ff(x)$%
 ---as illustrated in \prefpp{fig:YfX}.
 Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
 \thmbox{
   \brb{\begin{array}{FMD}
     (1).&$\rvY=\ff(\rvX)$  & and \\
-    (2).&$\ff$ is \prope{differentiable} 
+    (2).&$\ff$ is \prope{differentiable}
   \end{array}}
   \implies
   \brb{\ppy(y) = \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ffp\brp{\fgi_n(y)}}}}
@@ -584,17 +597,17 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
 \begin{enumerate}
   \item \label{item:YfX_gn}
         The problem with a function $\ff(x)$ with at least $\xN=1$ critical point is that
-        $\ffi(y)$ is \prope{not invertible}. 
-        That is, 
+        $\ffi(y)$ is \prope{not invertible}.
+        That is,
         $\ffi(y)$ has more than one solution (and thus the \structe{relation} $\ffi(y)$ is not a \structe{function}).
         However, note that in each partition $\setA_n$, $\ff(x)$ is \prope{invertible} and thus
-        $\ffi(y)$ in that partition has a \prope{unique} solution. 
+        $\ffi(y)$ in that partition has a \prope{unique} solution.
         Thus, each $\fg_n(x)$ \emph{is} \prop{invertible} in it's domain (and each $\fgi_n(y)$ exists as a function).
 
   %\item lemma. \label{ilem:YfX_ffp}  \label{ilem:YfX_dygi}
   %  \\\indentx$\ds
   %    \lim_{\varepsilon\to0} \fgi_n(y+\varepsilon)
-  %       = \lim_{\varepsilon\to0}\brs{\fgi_n(y) + \left.\Delta y\frac{1}{\dy/\dx}\right|_{x=\fgi_n(y)}} 
+  %       = \lim_{\varepsilon\to0}\brs{\fgi_n(y) + \left.\Delta y\frac{1}{\dy/\dx}\right|_{x=\fgi_n(y)}}
   %       = \lim_{\varepsilon\to0}\brs{\fgi_n(y) + \frac{\varepsilon}{\ffp\brs{\fgi_n(y)}}}
   %      $
 
@@ -683,7 +696,7 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
 
 %---------------------------------------
 \begin{example}
-\citetbl{
+\footnote{
   \citerp{papoulis}{95},
   \citerp{proakis}{29}
   }
@@ -703,12 +716,12 @@ Let $a,b\in\R$.
 \end{example}
 \begin{proof}
 %\begin{enumerate}
-%  \item This follows from \prefpp{thm:YfX}: 
+%  \item This follows from \prefpp{thm:YfX}:
     \begin{enumerate}
       \item \label{item:YaXb_ffp}
-            Note that $\ff(x)=ax+b$ is a \prope{differentiable function} with $\xN=0$ \prope{critical point}s 
+            Note that $\ff(x)=ax+b$ is a \prope{differentiable function} with $\xN=0$ \prope{critical point}s
             and $\ffp(x)=a$.
-      \item \label{item:YaXb_ffi} 
+      \item \label{item:YaXb_ffi}
             The inverse of $\ff(x)$ is $\fg_1(y)=\ffi(y)=\frac{y-b}{a}$.
       \item It follows that
         \begin{align*}
@@ -786,7 +799,7 @@ Let $a,b\in\R$.
 \end{figure}
 %---------------------------------------
 \begin{example}
-\citetbl{
+\footnote{
   \citerp{papoulis}{94}
   }
 \label{ex:Yf1X}
@@ -805,9 +818,9 @@ Let $a,b\in\R$.
 \begin{enumerate}
   \item \label{item:Yf1X_ffp}
         Note that $\ff(x)=1/x$ is a \prope{differentiable function} in $x>0$
-        with $\xN=0$ \prope{critical point}s 
+        with $\xN=0$ \prope{critical point}s
         and $\ffp(x)=-1/x^2$.
-  \item \label{item:Yf1X_ffi} 
+  \item \label{item:Yf1X_ffi}
         The inverse of $\ff(x)$ is $\fg_1(y)=\ffi(y)=\frac{1}{y}$.
   \item It follows that
     \begin{align*}
@@ -821,7 +834,7 @@ Let $a,b\in\R$.
     \end{align*}
 \end{enumerate}
 %\begin{enumerate}
-%  \item This follows from \prefpp{thm:YfX}: 
+%  \item This follows from \prefpp{thm:YfX}:
 %    \begin{enumerate}
 %      \item The only root of $y=\sfrac{1}{x}$ is $x_1=\sfrac{1}{y}$.
 %      \item $\ff'(x) = -\frac{1}{x^2}$
@@ -953,7 +966,7 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
         \end{align*}
     \end{enumerate}
 
-%  \item Alternatively 
+%  \item Alternatively
 %    \begin{enumerate}
 %      \item Let $h\to0$.
 %      \item lemma. First we show a useful relation for $\sqrt{y+h	}$.
@@ -1035,7 +1048,7 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
 \end{figure}
 %---------------------------------------
 \begin{example}
-\citetbl{
+\footnote{
   \citerpp{papoulis}{99}{100}
   }
 \label{prop:ppztan}
@@ -1084,7 +1097,7 @@ Let $Z=\tan\Theta$. Then
 %              \\&= \atan{z} + h\cos^2\atan{z}
 %              \\&= \atan{z} + h\frac{1}{1+z^2}
 %            \end{align*}
-%    
+%
 %      \item Now we prove the theorem using the above relation.
 %            \begin{align*}
 %              \ppz(z)h
@@ -1157,10 +1170,10 @@ Let $Z=\tan\Theta$. Then
 \begin{theorem}
 %---------------------------------------
 Let $\rvX$, $\rvY$, and $\rvZ$ be \fncte{random variable}s. %
-\thmbox{ 
+\thmbox{
   \brb{\begin{array}{FMD}
     (1). & $\rvZ \eqd \rvX + \rvY$ & and \\
-    (2). & $\rvX$ and $\rvY$ are \prope{independent} & \xref{def:independent} 
+    (2). & $\rvX$ and $\rvY$ are \prope{independent} & \xref{def:independent}
   \end{array}}
   \implies
   \brb{\ppz(z) = \ppx(z)\conv\ppy(z)}
@@ -1375,7 +1388,7 @@ we just have to determine the mean and variance of $Z$.
     \hline
   \end{tabular}
   \caption{\label{fig:pdf_uniform_sums}
-           The distributions of sums of independent uniformly distributed random variables 
+           The distributions of sums of independent uniformly distributed random variables
            \xref{ex:pdf_uniform_sums}}
 \end{figure}
 %---------------------------------------
@@ -1385,10 +1398,10 @@ we just have to determine the mean and variance of $Z$.
 Let $\seqn{\rvX_1, \rvX_2, \rvX_3, \ldots}$ be a \fncte{sequence}
 of \prope{independent} \xref{def:independent}
 \prope{uniformly distributed} random variables.
-Let $\ppx[\xN](x)$ be the \fncte{probability density function} of 
+Let $\ppx[\xN](x)$ be the \fncte{probability density function} of
 $\rvY\eqd\sum_{n=1}^{\xN}\rvX_n$.
 Some of these distributions are illustrated in \prefpp{fig:pdf_uniform_sums}.
 Note that the distributions of the sequence $\seqn{\ppx[1],\ppx[2],\ppx[3],\ldots}$
-are all \fncte{B-spline}s \xref{def:Bspline} and all form a 
+are all \fncte{B-spline}s \xref{def:Bspline} and all form a
 \prope{partition of unity} \xref{def:pun}.
 \end{example}
