--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -316,7 +316,7 @@
  \newcommand{\clFxr} [0]{\clF{\spX}{\R}}                 % set of functions f:X-->R (functionals)
  \newcommand{\clFcr} [0]{\clF{\C}{\R}}                   % set of functions f:C-->R 
  \newcommand{\clFrz} [0]{\clF{\R}{\Z}}                   % set of functions f:R-->Z 
- \newcommand{\clFor} [0]{\clF{\ocso}{\R}}                % set of random variables:  Omega-->R
+ \newcommand{\clFor} [0]{\clF{\pso}{\R}}                 % set of random variables:  Omega-->R
  \newcommand{\clFxxx}[0]{\clF{\setX\times\setX}{\setX}}  % set of functions f:X^2-->X
  \newcommand{\clFhh} [0]{\clF{\setX}{\setX}}             % set of functions f:H-->H
  \newcommand{\clFrr} [0]{\clF{\R}{\R}}                   % set of functions R-->R
