--- a/common/vsnorm.tex
+++ b/common/vsnorm.tex
@@ -69,8 +69,8 @@ $\norm{\vx_1+\vx_2+\cdots+\vx_\xN}\le\norm{\vx_1}+\norm{\vx_2}+\cdots+\norm{\vx_
 \begin{theorem}[\thmd{triangle inequality}]
 \label{thm:norm_tri}
 \footnote{
-  \citerp{michel1993}{344}
-  %\citorc{euclid}{Book I Proposition 20}
+  \citerp{michel1993}{344},
+  \citerc{euclid}{Book I Proposition 20}
   }
 %--------------------------------------
 Let $\tuplexn{\vx_n\in\setX}$ be an \structe{$\xN$-tuple} \xref{def:tuple} of vectors in a 
