Converted and random variable X,Y,Z to \rvX,\rvY,\rvZ in stats.tex

--- a/common/convex.tex
+++ b/common/convex.tex
@@ -98,10 +98,10 @@ This concept can be easily generalized:
 \end{listi}
 
 %---------------------------------------
-\begin{definition}
+\begin{definition}[\structd{intervals on ordered sets}]
 \footnote{
   \citerpg{apostol1975}{4}{0201002884},
-  \citorp{ore1935}{409}
+  \citePp{ore1935}{409}
   }
 \label{def:intcc}
 \label{def:intcc_order}
@@ -122,10 +122,10 @@ Let $\opair{\setX}{\le}$ be  an \structe{ordered set}\ifsxref{order}{def:order}.
 %\label{sec:lat_intervals}
 %=======================================
 %---------------------------------------
-\begin{definition}[intervals on lattices]
+\begin{definition}[\structd{intervals on lattices}]
 \footnote{
-  \citorp{duthie1942}{2}, %{$a$=\hie{lower extremity}, $b$=\hie{upper extremity}}\\
-  \citorpc{ore1935}{425}{\hie{quotient structures}}
+  \citePp{duthie1942}{2}, %{$a$=\hie{lower extremity}, $b$=\hie{upper extremity}}\\
+  \citePpc{ore1935}{425}{\structe{quotient structures}}
   }
 \label{def:lat_intervals}
 \label{def:intcc_lat}
@@ -166,7 +166,7 @@ The sublattices $\latL\intcc{x}{y}$ and $\latLd\intcc{x}{y}$ are defined as foll
   %\citerpg{khamsi2001}{35}{0471418250}\\
   \citerpg{vel1993}{8}{0444815058}
   %\citer{hormander1994}\\
-  %\citorp{menger1928}{81?}
+  %\citerp{menger1928}{81?}
   }
 %--------------------------------------
 %Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
@@ -358,7 +358,7 @@ Examples of metrics generating balls which are \emph{not} convex include the fol
 %  \citerpg{khamsi2001}{35}{0471418250}\\
 %  \citerpg{vel1993}{8}{0444815058}\\
 %  \citer{hormander1994}\\
-%  \citorp{menger1928}{81?}
+%  \citerp{menger1928}{81?}
 %  }
 %\index{geodesic convexity}
 %\index{convexity!geodesic}
@@ -558,7 +558,7 @@ A function $\ff:\R\to\R$ is
   \citerpg{mitrinovic2010}{6}{9048142253},
   \citerpg{bollobas1999}{3}{0521655773},
   \citerpg{lay1982}{7}{0471095842},
-  \citorpp{jensen1906}{179}{180}
+  \citerpp{jensen1906}{179}{180}
   }
 \label{thm:jensen_ineq}
 \label{thm:jensenineq}
@@ -625,7 +625,7 @@ less intuitive but provides powerful analytic results.
 %---------------------------------------
 Let $\ff:\R\to\R$.
 For every $x_1,x_2\in(a,b)$ and $\lambda\in[0,1]$
-\formbox{
+\thmbox{
   \ff \mbox{ is convex in $(a,b)$ } \iff
         \ff(\lambda x_1+(1-\lambda)x_2) \le \lambda\ff(x_1) + (1-\lambda)\ff(x_2)
   }
@@ -668,7 +668,7 @@ for whether that function is convex.
 \label{thm:convex_d2}
 \citepp{cover}{24}{25}
 %---------------------------------------
-\formbox{
+\thmbox{
   \ff''(x)>0 \implies \ff \mbox{ is convex}
   }
 \end{theorem}
