Relabeled some propositions regarding operations on random variables as corollaries

--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -1574,7 +1574,6 @@
   year         = {2000},
   pages        = {266},
   }
-
   
 @book{papoulis,
   isbn         = {0070484775},
@@ -1592,8 +1591,10 @@
 
 @book{papoulis1984,
   isbn         = {0070484686},
+  isbn         = {9780070484689},
   author       = {Anthanasios Papoulis},
   title        = {Probability, Random Variables, and Stochastic Processes},
+  series       = {McGraw-Hill Series in Electrical Engineering},
   edition      = {2},
   publisher    = {McGraw-Hill Book Company},
   address      = {New York},
