.sty file clean-up and a little re-organization

--- a/common/sty/ocs.sty
+++ b/common/sty/ocs.sty
@@ -192,4 +192,13 @@
 \newcommand{\mdo}[2]{{\mathsfup{mdo}}_{#1}\!\left(#2\right)} %real modulo operator
 \newcommand{\dmdo}[3]{{\mathsfup{dmdo}}_{#1}\!\left(#2,#3\right)} %difference operator
 
+\newcommand{\symA}{{\boxedLetter{\mathsym{A}}}}%
+\newcommand{\symB}{{\boxedLetter{\mathsym{B}}}}%
+\newcommand{\symC}{{\boxedLetter{\mathsym{C}}}}%
+\newcommand{\symD}{{\boxedLetter{\mathsym{D}}}}%
+\newcommand{\symT}{{\boxedLetter{\mathsym{T}}}}%
+\newcommand{\symG}{{\boxedLetter{\mathsym{G}}}}%
+\newcommand{\symN}{{\boxedLetter{\mathsym{N}}}}%
+\newcommand{\symX}{{\boxedLetter{\mathsym{X}}}}%
+
 
